--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 img {
     width: 100%;
 }
+
+.container {
+    padding: 1rem;
+}
+
+.main {
+    color: white;
+    padding: 2rem;
+    font-size: 40px;
+}
